tests/a/tests/integrity/fail/pattern/pattern.0.stderr
error: expected {*}{*} ({bin}{bin},{b}{b}), found {bin}{bin} ({bin}{bin},{bin}{bin})
 --> tests/integrity/fail/pattern/pattern.0.rs:6:18
  |
6 |     let (x, y) = (5, 6);
  |                  ^^^^^^
